Passed autograder p2, no extra credit

--- a/class/hw3/q2.ipynb
+++ b/class/hw3/q2.ipynb
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1253,12 +1253,11 @@
     "\n",
     "    for itr in range(max_iters):\n",
     "        total_loss = 0\n",
-    "        avg_acc = 0  # How are you supposed to take a running average?\n",
+    "        avg_acc = 0\n",
     "        for xb, yb in batches:\n",
     "\n",
     "            # forward\n",
     "            # YOUR CODE HERE\n",
-    "\n",
     "            y1 = forward(X=xb, params=params, name='layer1', activation=sigmoid)\n",
     "            probs = forward(X=y1, params=params, name='output', activation=softmax)\n",
     "            \n",
@@ -1267,38 +1266,34 @@
     "            # YOUR CODE HERE\n",
     "            loss, accuracy = compute_loss_and_acc(y=yb, probs=probs)\n",
     "            total_loss += loss\n",
-    "            avg_acc += accuracy\n",
+    "            avg_acc += accuracy * xb.shape[0] / x.shape[0]\n",
     "\n",
     "            # backward\n",
     "            # YOUR CODE HERE\n",
     "\n",
-    "            # Is this true? Is loss the same as delta the same as dJ/dy?\n",
-    "            g1 = backwards(delta=loss, params=params, name='output',\n",
+    "            # TODO: Look into the interaction of softmax with cross-entropy loss\n",
+    "            dJdy = probs\n",
+    "            dJdy[np.arange(probs.shape[0]), np.argmax(yb, axis=1)] -= 1\n",
+    "            g1 = backwards(delta=dJdy, params=params, name='output',\n",
     "                           activation_deriv=linear_deriv)\n",
     "            g2 = backwards(delta=g1, params=params, name='layer1',\n",
     "                           activation_deriv=sigmoid_deriv)\n",
     "\n",
     "            # apply gradient\n",
     "            # YOUR CODE HERE\n",
-    "\n",
-    "            # I don't think that dJ/dx means anything, right? Since we\n",
-    "            # can't actually change anything about x? That's the input\n",
     "            for name in ['layer1', 'output']:\n",
-    "                params[f'W{name}'] += params[f'grad_W{name}']\n",
-    "                params[f'b{name}'] += params[f'grad_b{name}']\n",
-    "\n",
-    "        # Is this how we're intended to do it?\n",
-    "        avg_acc /= len(batches)\n",
+    "                params[f'W{name}'] -= learning_rate * params[f'grad_W{name}']\n",
+    "                params[f'b{name}'] -= learning_rate * params[f'grad_b{name}']\n",
     "            \n",
     "        if itr % 100 == 0:\n",
     "            print(\"itr: {:02d} \\t loss: {:.2f} \\t acc : {:.2f}\".format(\n",
-    "                itr, total_loss, avg_acc))\n",
+    "                  itr, total_loss, avg_acc))\n",
     "    return total_loss, avg_acc\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1316,34 +1311,15 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-4-dc1c16e312fb>:14: RuntimeWarning: overflow encountered in exp\n",
-      "  res = 1 / (1 + np.exp(-X))\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "itr: 00 \t loss: 64.03 \t acc : 0.30\n",
-      "itr: 100 \t loss: 66.65 \t acc : 0.25\n",
-      "itr: 200 \t loss: 65.19 \t acc : 0.25\n",
-      "itr: 300 \t loss: 65.19 \t acc : 0.25\n",
-      "itr: 400 \t loss: 65.19 \t acc : 0.25\n",
-      "itr: 500 \t loss: 65.19 \t acc : 0.25\n"
-     ]
-    },
-    {
-     "ename": "AssertionError",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-26-663f4ec7d417>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;31m# with default settings, you should get loss < 35 and accuracy > 75%\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0mtotal_loss\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m35\u001b[0m \u001b[0;32mand\u001b[0m \u001b[0mavg_acc\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0;36m0.75\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mAssertionError\u001b[0m: "
+      "itr: 00 \t loss: 60.74 \t acc : 0.25\n",
+      "itr: 100 \t loss: 40.14 \t acc : 0.75\n",
+      "itr: 200 \t loss: 33.45 \t acc : 0.82\n",
+      "itr: 300 \t loss: 29.28 \t acc : 0.88\n",
+      "itr: 400 \t loss: 26.36 \t acc : 0.90\n",
+      "itr: 500 \t loss: 24.23 \t acc : 0.88\n"
      ]
     }
    ],
@@ -1421,7 +1397,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 40,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1459,31 +1435,53 @@
     "\n",
     "        # YOUR CODE HERE\n",
     "        name = k[1:]\n",
-    "        losses = []\n",
-    "        for sign in [-1, 1]:\n",
     "\n",
-    "            X, pre_act, post_act = params[f'cache_{name}']\n",
-    "            params[k] += sign * eps\n",
+    "        # Build up all of the positions we need to twiddle\n",
+    "        # Discriminate between 1D and 2D arrays\n",
+    "        if len(v.shape) == 1:\n",
+    "            indices = [(i, ) for i in range(v.shape[0])]\n",
+    "        elif len(v.shape) == 2:\n",
+    "            indices = [tuple([i, j])\n",
+    "                       for i in range(v.shape[0])\n",
+    "                       for j in range(v.shape[1])]\n",
+    "        else:\n",
+    "            raise ValueError(\"Didn't prepare for this case\")\n",
     "\n",
-    "            if name == \"layer1\":\n",
-    "                y1 = forward(X, params, name, sigmoid)\n",
-    "                probs = forward(y1, params, \"output\", softmax)\n",
-    "            else:\n",
-    "                probs = forward(X, params, name, softmax)\n",
+    "        grad_k = np.zeros(v.shape)\n",
+    "        for index in indices:\n",
+    "            \n",
+    "            losses = []\n",
+    "            for sign in [1, -1]:\n",
     "\n",
-    "            # What are we supposed to use as labels?\n",
-    "            import ipdb; ipdb.set_trace()\n",
-    "            loss, accuracy = compute_loss_and_acc(y=yb, probs=probs)\n",
+    "                # Twiddle a single value\n",
+    "                params[k][index] += sign * eps\n",
     "\n",
-    "            # Clean up, bring things back to the original\n",
-    "            params[k] -= sign * eps\n",
+    "                # Run forward pass (different depending on where we start)\n",
+    "                X, pre_act, post_act = params[f'cache_{name}']\n",
+    "                if name == \"layer1\":\n",
+    "                    y1 = forward(X, params, \"layer1\", sigmoid)\n",
+    "                    probs = forward(y1, params, \"output\", softmax)\n",
+    "                elif name == \"output\":\n",
+    "                    probs = forward(X, params, \"output\", softmax)\n",
+    "                else:\n",
+    "                    raise ValueError(\"Didn't prepare for this case\")\n",
     "\n",
-    "        params[f'grad_{k}'] = np.sum(losses) / (2 * eps)\n"
+    "                # Calculate the loss for this small change\n",
+    "                # Note that y is defined in the cell above, it's a global variable\n",
+    "                loss, accuracy = compute_loss_and_acc(y, probs)\n",
+    "                losses.append(loss)\n",
+    "                \n",
+    "                # Clean up, bring things back to the original\n",
+    "                params[k][index] -= sign * eps\n",
+    "\n",
+    "            grad_k[index] = (losses[0] - losses[1]) / (2 * eps)\n",
+    "                \n",
+    "        params[f'grad_{k}'] = grad_k\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 41,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1501,40 +1499,14 @@
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<ipython-input-4-dc1c16e312fb>:14: RuntimeWarning: overflow encountered in exp\n",
-      "  res = 1 / (1 + np.exp(-X))\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "> \u001b[0;32m<ipython-input-34-52915ff83b0d>\u001b[0m(36)\u001b[0;36mcenteral_differences_gradient\u001b[0;34m()\u001b[0m\n",
-      "\u001b[0;32m     35 \u001b[0;31m            \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m---> 36 \u001b[0;31m            \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_loss_and_acc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0myb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprobs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\u001b[0;32m     37 \u001b[0;31m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0m\n",
-      "ipdb> params.keys()\n",
-      "dict_keys(['Wlayer1', 'blayer1', 'Woutput', 'boutput', 'cache_layer1', 'cache_output', 'grad_Woutput', 'grad_boutput', 'grad_Wlayer1', 'grad_blayer1'])\n",
-      "ipdb> q\n"
-     ]
-    },
-    {
-     "ename": "BdbQuit",
+     "ename": "AssertionError",
      "evalue": "",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mBdbQuit\u001b[0m                                   Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-35-03e098073bb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;31m# Compute the estimated gradient using central difference\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 14\u001b[0;31m \u001b[0mcenteral_differences_gradient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mparams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     15\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     16\u001b[0m \u001b[0mtotal_error\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-34-52915ff83b0d>\u001b[0m in \u001b[0;36mcenteral_differences_gradient\u001b[0;34m(params, eps)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_loss_and_acc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0myb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprobs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m             \u001b[0;31m# Clean up, bring things back to the original\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-34-52915ff83b0d>\u001b[0m in \u001b[0;36mcenteral_differences_gradient\u001b[0;34m(params, eps)\u001b[0m\n\u001b[1;32m     34\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     35\u001b[0m             \u001b[0;32mimport\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m;\u001b[0m \u001b[0mipdb\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mset_trace\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 36\u001b[0;31m             \u001b[0mloss\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maccuracy\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcompute_loss_and_acc\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0myb\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mprobs\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mprobs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     37\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     38\u001b[0m             \u001b[0;31m# Clean up, bring things back to the original\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.8/bdb.py\u001b[0m in \u001b[0;36mtrace_dispatch\u001b[0;34m(self, frame, event, arg)\u001b[0m\n\u001b[1;32m     86\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;31m# None\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     87\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'line'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 88\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     89\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mevent\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'call'\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     90\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdispatch_call\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0marg\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m/usr/lib/python3.8/bdb.py\u001b[0m in \u001b[0;36mdispatch_line\u001b[0;34m(self, frame)\u001b[0m\n\u001b[1;32m    111\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstop_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mor\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mbreak_here\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    112\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0muser_line\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mframe\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 113\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mquitting\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mraise\u001b[0m \u001b[0mBdbQuit\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    114\u001b[0m         \u001b[0;32mreturn\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtrace_dispatch\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    115\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mBdbQuit\u001b[0m: "
+      "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-41-03e098073bb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mtotal_error\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m# should be less than 1e-4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0;36m0.\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mtotal_error\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m1e-4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
    ],
