Making progress on q3 q4, gradescope failing some of them

--- a/class/hw3/q4.ipynb
+++ b/class/hw3/q4.ipynb
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "7eda8dbd",
    "metadata": {
     "deletable": false,
@@ -129,6 +129,7 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import os\n",
     "\n",
     "import skimage\n",
     "import skimage.measure\n",
@@ -141,15 +142,48 @@
     "\n",
     "# takes a color image\n",
     "# returns a list of bounding boxes and black_and_white image\n",
-    "def findLetters(image):\n",
-    "    bboxes = []\n",
-    "    bw = None\n",
+    "def findLetters(image, sigma=2.0):\n",
+    "\n",
     "    # insert processing in here\n",
     "    # one idea estimate noise -> denoise -> greyscale -> threshold -> morphology -> label -> skip small boxes \n",
     "    # this can be 10 to 15 lines of code using skimage functions\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    return bboxes, bw"
+    "    # YOUR CODE HERE    \n",
+    "    blurred = skimage.filters.gaussian(image, sigma=(sigma, sigma), truncate=3.0, multichannel=True)\n",
+    "    gray = skimage.color.rgb2gray(blurred)\n",
+    "    binary = gray > skimage.filters.threshold_otsu(gray)\n",
+    "\n",
+    "    # Thicken the characters up a bit depending on the image size\n",
+    "    thick_scalar = int(7 * 1600 / max(binary.shape))\n",
+    "    thicker = skimage.morphology.binary_erosion(\n",
+    "        binary, selem=np.ones((thick_scalar, thick_scalar))\n",
+    "    )\n",
+    "    labelled = skimage.measure.label(thicker, background=True, connectivity=2)\n",
+    "    regions = skimage.measure.regionprops(labelled)\n",
+    "\n",
+    "    # Decide which size of boxes to drop based on the median character size\n",
+    "    area_threshold = 0.2 * np.median([region.area for region in regions])\n",
+    "    bboxes = [region.bbox for region in regions if region.area > area_threshold]\n",
+    "\n",
+    "    return bboxes, binary.astype(float)\n",
+    "\n",
+    "\n",
+    "# from matplotlib import pyplot\n",
+    "# import skimage.draw\n",
+    "# for image_path in os.listdir('images'):\n",
+    "#     print(image_path)\n",
+    "#     image = skimage.io.imread(os.path.join('images', image_path))\n",
+    "#     bboxes, bw = findLetters(image)\n",
+    "#     skimage.io.imsave(image_path.replace(\".\", \"BW.\"), (bw * 255).astype(np.uint8))\n",
+    "#     pyplot.imshow(bw, interpolation='none')\n",
+    "#     pyplot.show()\n",
+    "#     for bbox in bboxes:\n",
+    "#         rows, columns = skimage.draw.rectangle_perimeter(\n",
+    "#             bbox[0:2], end=bbox[2:], shape=image.shape\n",
+    "#         )\n",
+    "#         image[rows, columns] = (255, 0, 0)\n",
+    "#     skimage.io.imsave(image_path.replace(\".\", \"BOX.\"), image)\n",
+    "#     pyplot.imshow(image)\n",
+    "#     pyplot.show()"
    ]
   },
   {
@@ -178,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "d32d3026",
    "metadata": {
     "deletable": false,
@@ -207,25 +241,81 @@
     "warnings.simplefilter(action='ignore', category=FutureWarning)\n",
     "warnings.simplefilter(action='ignore', category=UserWarning)\n",
     "\n",
-    "for img in os.listdir('images'):\n",
-    "    im1 = skimage.img_as_float(skimage.io.imread(os.path.join('images',img)))\n",
-    "    bboxes, bw = findLetters(im1)\n",
     "\n",
-    "    plt.imshow(bw)\n",
+    "def get_row_groups(num_rows, bboxes):\n",
+    "    \"\"\"\n",
+    "    Get row groupings of bboxes, assuming there's at least one horizontal pixel\n",
+    "    between each row. This won't handle slanted rows, which should be fine\n",
+    "    since those don't appear to show up in the input images.\n",
+    "    \"\"\"\n",
+    "    row_groups = []\n",
+    "    # TODO\n",
+    "    rows = np.array(range(num_rows))\n",
+    "    # TODO\n",
     "    for bbox in bboxes:\n",
-    "        minr, minc, maxr, maxc = bbox\n",
-    "        rect = matplotlib.patches.Rectangle((minc, minr), maxc - minc, maxr - minr,\n",
-    "                                fill=False, edgecolor='red', linewidth=2)\n",
-    "        plt.gca().add_patch(rect)\n",
-    "    plt.show()\n",
-    "    # find the rows using..RANSAC, counting, clustering, etc.\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
-    "    # crop the bounding boxes\n",
-    "    # note.. before you flatten, transpose the image (that's how the dataset is!)\n",
-    "    # consider doing a square crop, and even using np.pad() to get your images looking more like the dataset\n",
-    "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n"
+    "        rows[bbox[0]:bbox[2]+1] = -1\n",
+    "    # TODO\n",
+    "    dividers = np.argwhere( (rows > 0)[:-1] & (rows < 0)[1:] ).T[0]\n",
+    "    dividers = np.hstack((dividers, [num_rows]))\n",
+    "    # TODO\n",
+    "    # This is a double loop, but it's also over ~50 items and ~8, so I\n",
+    "    # won't bother compressing it\n",
+    "    for i in range(len(dividers) - 1):\n",
+    "        row_group = []\n",
+    "        for bbox in bboxes:\n",
+    "            if dividers[i] < bbox[0] < dividers[i+1]:\n",
+    "                row_group.append(bbox)\n",
+    "        # TODO\n",
+    "        row_groups.append(sorted(row_group, key=lambda x: x[1]))\n",
+    "    return dividers, row_groups\n",
+    "\n",
+    "\n",
+    "def pretty_letters(binary, row_groups):\n",
+    "    \"\"\"\n",
+    "    Returns a set of 32x32 images of the same layout as row_groups.\n",
+    "    \"\"\"\n",
+    "    image_groups = []\n",
+    "    for row in row_groups:\n",
+    "        image_row = []\n",
+    "        for bbox in row:\n",
+    "            raw = binary[bbox[0]:bbox[2], bbox[1]:bbox[3]]\n",
+    "            buffer = max(raw.shape) // 32\n",
+    "            hpad = buffer + (max(raw.shape) - raw.shape[0]) // 2\n",
+    "            wpad = buffer + (max(raw.shape) - raw.shape[1]) // 2\n",
+    "            padded = np.pad(raw,\n",
+    "                            pad_width=((hpad, hpad), (wpad, wpad)),\n",
+    "                            mode='constant',\n",
+    "                            constant_values=1.0)\n",
+    "            im32 = skimage.transform.resize(padded, (32, 32), anti_aliasing=True)\n",
+    "            image_row.append(im32.T)\n",
+    "            # from matplotlib import pyplot; pyplot.imshow(im32); pyplot.show()\n",
+    "        image_groups.append(image_row)\n",
+    "    return image_groups\n",
+    "\n",
+    "\n",
+    "# for img in os.listdir('images'):\n",
+    "#     im1 = skimage.img_as_float(skimage.io.imread(os.path.join('images',img)))\n",
+    "#     bboxes, bw = findLetters(im1)\n",
+    "    \n",
+    "#     plt.imshow(bw)\n",
+    "#     for bbox in bboxes:\n",
+    "#         minr, minc, maxr, maxc = bbox\n",
+    "#         rect = matplotlib.patches.Rectangle(\n",
+    "#             (minc, minr), maxc - minc, maxr - minr,\n",
+    "#             fill=False, edgecolor='red', linewidth=2\n",
+    "#         )\n",
+    "#         plt.gca().add_patch(rect)\n",
+    "#     plt.show()\n",
+    "\n",
+    "#     # find the rows using..RANSAC, counting, clustering, etc.\n",
+    "#     # YOUR CODE HERE\n",
+    "#     _, row_groups = get_row_groups(bw.shape[0], bboxes)\n",
+    "\n",
+    "#     # crop to the bounding boxes\n",
+    "#     # note.. before you flatten, transpose the image (that's how the dataset is!)\n",
+    "#     # consider doing a square crop, and even using np.pad() to get your images looking more like the dataset\n",
+    "#     # YOUR CODE HERE\n",
+    "#     image_groups = pretty_letters(bw, row_groups)\n"
    ]
   },
   {
@@ -254,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "7b488866",
    "metadata": {
     "deletable": false,
@@ -269,7 +359,40 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "01_list.jpg\n",
+      "T 0 D J L I S T\n",
+      "I N A K E A T D D D L I S T\n",
+      "I L H F C K D F E 7 H E F I R S T\n",
+      "T H I N G Q N T Q D Q L I S T\n",
+      "3 K 2 A L I Z E Y 0 U H A V E A L R 2 A D T\n",
+      "C D M P L F T L D J T H I N G S\n",
+      "4 R F W A R D Y O W R S E L F W I T H\n",
+      "A N A P\n",
+      "03_haiku.jpg\n",
+      "H A I K U S A R E H M A S Y\n",
+      "B W T S J M E T I M E S T H E Y D D W T M A K E S G M N G G M\n",
+      "R B G R I G E R A M 1 Q K\n",
+      "02_letters.jpg\n",
+      "D B C D F F 6\n",
+      "H I J K C T N\n",
+      "Q P Q K S T U\n",
+      "V W X Y Z\n",
+      "1 Z 3 M S 6 7 Y Y J\n",
+      "04_deep.jpg\n",
+      "C Y F Y C K M 2 K M I X W\n",
+      "Y F Y Y Y K C E D K N J T G\n",
+      "C Y M Y Y Y Y T L E 2 K K I K G\n",
+      "\n",
+      "Length equal? False\n",
+      "Accuracy: 0.1646586345381526\n"
+     ]
+    }
+   ],
    "source": [
     "# load the weights\n",
     "# run the crops through your neural network and print them out\n",
@@ -277,16 +400,53 @@
     "import string\n",
     "import numpy as np\n",
     "\n",
-    "letters = np.array([_ for _ in string.ascii_uppercase[:26]] + [str(_) for _ in range(10)])\n",
+    "from ipynb.fs.defs.q2 import *\n",
+    "\n",
+    "\n",
+    "def classify(params, image, letters):\n",
+    "    y1 = forward(image.reshape(1, 32*32), params, \"layer1\", sigmoid)\n",
+    "    probs = forward(y1, params, \"output\", softmax)\n",
+    "    return letters[np.argmax(probs)]\n",
+    "\n",
+    "\n",
+    "letters = np.array([c for c in string.ascii_uppercase[:26]] + [str(n) for n in range(10)])\n",
     "params = pickle.load(open('q3_weights.pickle','rb'))\n",
     "# YOUR CODE HERE\n",
-    "raise NotImplementedError()"
+    "characters = []\n",
+    "for img in os.listdir('images'):\n",
+    "    print(f\"{img}\")\n",
+    "    im1 = skimage.img_as_float(skimage.io.imread(os.path.join('images', img)))\n",
+    "    bboxes, bw = findLetters(im1)\n",
+    "    _, row_groups = get_row_groups(bw.shape[0], bboxes)\n",
+    "    image_groups = pretty_letters(bw, row_groups)\n",
+    "    for image_row in image_groups:\n",
+    "        characters.append([classify(params, image, letters) for image in image_row])\n",
+    "        print(\" \".join(characters[-1]))\n",
+    "\n",
+    "flattened = np.array(sum(characters, start=[]))\n",
+    "correct = np.array(\n",
+    "    list(\"TODOLIST1MAKEATODOLIST2CHECKOFFTHEFIRSTTHINGONTHETODOLIST\" +\n",
+    "         \"3REALIZEYOUHAVEALREADYCOMPLETED2THINGS4REWARDYOURSELFWITHANAP\" +\n",
+    "         \"ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890\" +\n",
+    "         \"HAIKUSAREEASYBUTSOMETIMESTHEYDONTMAKESENSEREFRIGERATOR\" +\n",
+    "         \"DEEPLEARNINGDEEPERLEARNINGDEEPESTLEARNING\")\n",
+    ")\n",
+    "print(f\"\\nLength equal? {flattened.shape == correct.shape}\")\n",
+    "print(f\"Accuracy: {np.sum(flattened[:len(correct)] == correct) / len(correct)}\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cf9c0378",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -300,7 +460,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.11"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
