--- a/class/hw3/q2.ipynb
+++ b/class/hw3/q2.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -155,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -468,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -559,7 +559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -680,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -740,7 +740,7 @@
     "    W = params['W' + name]\n",
     "    b = params['b' + name]\n",
     "    X, pre_act, post_act = params['cache_' + name]\n",
-    "\n",
+    "    \n",
     "    # do the derivative through activation first\n",
     "    # then compute the derivative W,b, and X\n",
     "    # YOUR CODE HERE\n",
@@ -761,11 +761,12 @@
     "    # Then I realized that because we are summing gradients you also\n",
     "    # want to sum along the first axis (sums across the batch) and\n",
     "    # removing the \"b\" from \"->bjk\" does that.\n",
-    "    dydW = np.array([\n",
-    "        dy_dW(post_act.shape[1], X[batch])\n",
-    "        for batch in range(post_act.shape[0])\n",
-    "    ])\n",
-    "    grad_W = np.einsum(\"bi,bijk->jk\", stub, dydW)\n",
+    "    #dydW = np.array([\n",
+    "    #    dy_dW(post_act.shape[1], X[batch])\n",
+    "    #    for batch in range(post_act.shape[0])\n",
+    "    #])\n",
+    "    #grad_W = np.einsum(\"bi,bijk->jk\", stub, dydW)\n",
+    "    grad_W = np.einsum(\"bi,bj->ji\", stub, X)\n",
     "\n",
     "    # Because dy/db is just 1, then for any particular item\n",
     "    # in the batch dJ/db = dJ/dy * A'(y). Since we are summing the\n",
@@ -810,7 +811,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1138,7 +1139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1184,7 +1185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1213,7 +1214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1229,6 +1230,39 @@
    },
    "outputs": [],
    "source": [
+    "def network_step(x_batch: np.ndarray, y_batch: np.ndarray, params: dict,\n",
+    "                 total_loss: float, avg_acc: float, learning_rate: float, len_x_full: int):\n",
+    "    # forward\n",
+    "    # YOUR CODE HERE\n",
+    "    y1 = forward(X=x_batch, params=params, name='layer1', activation=sigmoid)\n",
+    "    probs = forward(X=y1, params=params, name='output', activation=softmax)\n",
+    "    \n",
+    "    # loss\n",
+    "    # be sure to add loss and accuracy to epoch totals\n",
+    "    # YOUR CODE HERE\n",
+    "    loss, accuracy = compute_loss_and_acc(y=y_batch, probs=probs)\n",
+    "    total_loss += loss\n",
+    "    avg_acc += accuracy * x_batch.shape[0] / len_x_full\n",
+    "\n",
+    "    # backward\n",
+    "    # YOUR CODE HERE\n",
+    "    # TODO: Look into the interaction of softmax with cross-entropy loss\n",
+    "    dJdy = probs\n",
+    "    dJdy[np.arange(probs.shape[0]), np.argmax(y_batch, axis=1)] -= 1\n",
+    "    g1 = backwards(delta=dJdy, params=params, name='output',\n",
+    "                   activation_deriv=linear_deriv)\n",
+    "    g2 = backwards(delta=g1, params=params, name='layer1',\n",
+    "                   activation_deriv=sigmoid_deriv)\n",
+    "\n",
+    "    # apply gradient\n",
+    "    # YOUR CODE HERE\n",
+    "    for name in ['layer1', 'output']:\n",
+    "        params[f'W{name}'] -= learning_rate * params[f'grad_W{name}']\n",
+    "        params[f'b{name}'] -= learning_rate * params[f'grad_b{name}']\n",
+    "    \n",
+    "    return total_loss, avg_acc\n",
+    "\n",
+    "\n",
     "def train(x: np.ndarray, y: np.ndarray, params: dict, batch_size: int = 5,\n",
     "          max_iters: int = 500, learning_rate: float=1e-3):\n",
     "    \n",
@@ -1255,36 +1289,16 @@
     "        total_loss = 0\n",
     "        avg_acc = 0\n",
     "        for xb, yb in batches:\n",
+    "            total_loss, avg_acc = network_step(\n",
+    "                x_batch=xb,\n",
+    "                y_batch=yb,\n",
+    "                params=params,\n",
+    "                total_loss=total_loss,\n",
+    "                avg_acc=avg_acc,\n",
+    "                learning_rate=learning_rate,\n",
+    "                len_x_full=x.shape[0],\n",
+    "            )\n",
     "\n",
-    "            # forward\n",
-    "            # YOUR CODE HERE\n",
-    "            y1 = forward(X=xb, params=params, name='layer1', activation=sigmoid)\n",
-    "            probs = forward(X=y1, params=params, name='output', activation=softmax)\n",
-    "            \n",
-    "            # loss\n",
-    "            # be sure to add loss and accuracy to epoch totals\n",
-    "            # YOUR CODE HERE\n",
-    "            loss, accuracy = compute_loss_and_acc(y=yb, probs=probs)\n",
-    "            total_loss += loss\n",
-    "            avg_acc += accuracy * xb.shape[0] / x.shape[0]\n",
-    "\n",
-    "            # backward\n",
-    "            # YOUR CODE HERE\n",
-    "\n",
-    "            # TODO: Look into the interaction of softmax with cross-entropy loss\n",
-    "            dJdy = probs\n",
-    "            dJdy[np.arange(probs.shape[0]), np.argmax(yb, axis=1)] -= 1\n",
-    "            g1 = backwards(delta=dJdy, params=params, name='output',\n",
-    "                           activation_deriv=linear_deriv)\n",
-    "            g2 = backwards(delta=g1, params=params, name='layer1',\n",
-    "                           activation_deriv=sigmoid_deriv)\n",
-    "\n",
-    "            # apply gradient\n",
-    "            # YOUR CODE HERE\n",
-    "            for name in ['layer1', 'output']:\n",
-    "                params[f'W{name}'] -= learning_rate * params[f'grad_W{name}']\n",
-    "                params[f'b{name}'] -= learning_rate * params[f'grad_b{name}']\n",
-    "            \n",
     "        if itr % 100 == 0:\n",
     "            print(\"itr: {:02d} \\t loss: {:.2f} \\t acc : {:.2f}\".format(\n",
     "                  itr, total_loss, avg_acc))\n",
@@ -1293,7 +1307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1314,12 +1328,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "itr: 00 \t loss: 60.74 \t acc : 0.25\n",
-      "itr: 100 \t loss: 40.14 \t acc : 0.75\n",
-      "itr: 200 \t loss: 33.45 \t acc : 0.82\n",
-      "itr: 300 \t loss: 29.28 \t acc : 0.88\n",
-      "itr: 400 \t loss: 26.36 \t acc : 0.90\n",
-      "itr: 500 \t loss: 24.23 \t acc : 0.88\n"
+      "itr: 00 \t loss: 56.81 \t acc : 0.25\n",
+      "itr: 100 \t loss: 43.05 \t acc : 0.72\n",
+      "itr: 200 \t loss: 36.87 \t acc : 0.70\n",
+      "itr: 300 \t loss: 32.78 \t acc : 0.70\n",
+      "itr: 400 \t loss: 29.73 \t acc : 0.77\n",
+      "itr: 500 \t loss: 27.68 \t acc : 0.80\n"
      ]
     }
    ],
@@ -1397,7 +1411,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 18,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -1481,7 +1495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 19,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -1505,7 +1519,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-41-03e098073bb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mtotal_error\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m# should be less than 1e-4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0;36m0.\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mtotal_error\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m1e-4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-19-03e098073bb1>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     22\u001b[0m         \u001b[0mtotal_error\u001b[0m \u001b[0;34m+=\u001b[0m \u001b[0merr\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;31m# should be less than 1e-4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 24\u001b[0;31m \u001b[0;32massert\u001b[0m \u001b[0;36m0.\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0mtotal_error\u001b[0m \u001b[0;34m<\u001b[0m \u001b[0;36m1e-4\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mAssertionError\u001b[0m: "
      ]
     }
@@ -1535,6 +1549,23 @@
     "        total_error += err\n",
     "# should be less than 1e-4\n",
     "assert 0. < total_error < 1e-4"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.00045857055342753784\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(total_error)"
    ]
   },
   {
