--- a/class/hw3/q2.ipynb
+++ b/class/hw3/q2.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -897,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "deletable": false,
     "nbgrader": {
@@ -933,7 +933,25 @@
     "    b = params['b' + name] # Biases [F]\n",
     "    \n",
     "    # YOUR CODE HERE\n",
-    "    raise NotImplementedError()\n",
+    "    res = []\n",
+    "    for batch_idx in range(X.shape[0]):  # [N]\n",
+    "        # Add requested padding --        channels   height      width\n",
+    "        element = np.pad(X[batch_idx], ((0, 0), (pad, pad), (pad, pad)))\n",
+    "        \n",
+    "        per_channel = []\n",
+    "        for channel_idx in range(w.shape[0]):  # [F]\n",
+    "            kernel = w[channel_idx]\n",
+    "            matrix = []\n",
+    "            for i in range(0, element.shape[1] + 1 - kernel.shape[1], stride):  # [H]\n",
+    "                row = []\n",
+    "                for j in range(0, element.shape[2] + 1 - kernel.shape[2], stride):  # [W]\n",
+    "                    thing = element[:, i:i+kernel.shape[1], j:j+kernel.shape[2]]\n",
+    "                    correlated = np.einsum(\"ijk,ijk->\", thing, kernel) + b[channel_idx]\n",
+    "                    row.append(correlated)\n",
+    "                matrix.append(row)\n",
+    "            per_channel.append(matrix)\n",
+    "        res.append(per_channel)\n",
+    "    res = np.array(res)\n",
     "\n",
     "    # store the input and convolution parameters\n",
     "    # these will be important in backprop\n",
@@ -944,7 +962,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "deletable": false,
     "editable": false,
@@ -960,7 +978,15 @@
      "task": false
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0141824738238694e-09\n"
+     ]
+    }
+   ],
    "source": [
     "x_shape = np.array((2, 3, 4, 4))\n",
     "w_shape = np.array((3, 3, 4, 4))\n",
