--- a/class/hw3/q2.ipynb
+++ b/class/hw3/q2.ipynb
@@ -1611,7 +1611,7 @@
    "hash": "54955deeadaafb0b8557ccc212e60e9b012c0994cf03c4af428539b6234184e1"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
