I incredibly dumbly erased this stuff once, actually save it

--- a/class/hw4/q3.ipynb
+++ b/class/hw4/q3.ipynb
@@ -481,18 +481,8 @@
     "matches = briefMatch(desc_cd, desc_cc)\n",
     "H_cc2cd, inliers = computeH_ransac(matches, locs_cd, locs_cc, tol=4)\n",
     "\n",
-    "plotMatches(cv2.imread(\"figure/cv_desk.png\"),\n",
-    "            cv2.imread(\"figure/cv_cover.jpg\"),\n",
-    "            matches,\n",
-    "            locs_cd,\n",
-    "            locs_cc,\n",
-    "            )\n",
-    "plotMatches(cv2.imread(\"figure/cv_desk.png\"),\n",
-    "            cv2.imread(\"figure/cv_cover.jpg\"),\n",
-    "            matches[inliers],\n",
-    "            locs_cd,\n",
-    "            locs_cc,\n",
-    "            )\n",
+    "plotMatches(cv2.imread(\"figure/cv_desk.png\"), cv2.imread(\"figure/cv_cover.jpg\"), matches, locs_cd, locs_cc)\n",
+    "plotMatches(cv2.imread(\"figure/cv_desk.png\"), cv2.imread(\"figure/cv_cover.jpg\"), matches[inliers], locs_cd, locs_cc)\n",
     "\n",
     "# Read in and resize to be the same size as CV cover\n",
     "hp_cover = cv2.cvtColor(cv2.imread(\"figure/hp_cover.jpg\"), cv2.COLOR_BGR2RGB)\n",
@@ -601,10 +591,7 @@
     "        ).T\n",
     "        for channel in range(3)\n",
     "    ])\n",
-    "    \n",
-    "#     pyplot.imshow(transformed)\n",
-    "#     pyplot.colorbar()\n",
-    "#     pyplot.show()\n",
+    "    # pyplot.imshow(transformed); pyplot.colorbar(); pyplot.show()\n",
     "    \n",
     "    composite_img = img.copy()\n",
     "    composite_img[mask] = transformed[mask]\n",
